# adventure

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Chest.cpp  Chest.hpp  Direction.hpp  Engine.cpp  Engine.hpp  Item.cpp  Item.hpp  Makefile  Map.cpp  Map.hpp  Monster.hpp  Player.hpp  Point.hpp  README.md  Renderer.hpp  TODO.md  build.cmd
.github/workflows/: ci.yml
data/: game_config.txt  quests.txt
maps/: 0001.map
src/: Action.cpp  Action.hpp  Character.hpp  Chest.cpp  Chest.hpp  Direction.cpp  Direction.hpp  Engine.cpp  Engine.hpp  EventBus.cpp  EventBus.hpp  GameConfig.cpp  GameConfig.hpp  GameObject.hpp  Item.cpp  Item.hpp  Listener.cpp  Listener.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  MapObject.hpp  MapPart.cpp  MapPart.hpp  Monster.cpp  Monster.hpp  NPC.cpp  NPC.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  Point.cpp  Point.hpp  Quest.cpp  Quest.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  (+2 more)
tests/: CMakeLists.txt  README.md  test_action.cpp  test_chest.cpp  test_direction.cpp  test_event_bus.cpp  test_item.cpp  test_map.cpp  test_player.cpp  test_resource_manager.cpp
